# SOAR

./: .gitignore  README.md  index.html
css/: bootstrap-4.4.1.css  custom.css
src/planner/: .clang-format
src/planner/active_perception/: CMakeLists.txt  package.xml
src/planner/active_perception/include/active_perception/: frontier_finder.h  graph_node.h  graph_search.h  perception_utils.h
src/planner/active_perception/src/: frontier_finder.cpp  graph_node.cpp  perception_utils.cpp
src/planner/heterogeneous_manager/: CMakeLists.txt  package.xml
src/planner/heterogeneous_manager/config/: hetero.rviz
src/planner/heterogeneous_manager/include/heterogeneous_manager/: coverage_manager.h  hetero_data.h  heterogeneous_planner_fsm.h  heterogeneous_planner_manager.h
src/planner/heterogeneous_manager/include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
src/planner/heterogeneous_manager/launch/: algorithm_camera_drone_pisa.xml  algorithm_camera_drone_sydney.xml  algorithm_lidar_drone_pisa.xml  algorithm_lidar_drone_sydney.xml  pisa.launch  rviz.launch  single_camera_uav.xml  single_camera_uav_exploration.xml  single_lidar_uav.xml  single_lidar_uav_exploration.xml  sydney.launch
src/planner/heterogeneous_manager/msg/: DroneState.msg  ViewpointsTask.msg  VisitedTour.msg
src/planner/heterogeneous_manager/src/: coverage_manager.cpp  heterogeneous_planner_fsm.cpp  heterogeneous_planner_manager.cpp  heterogeneous_planner_node.cpp
src/planner/path_searching/: CMakeLists.txt  package.xml
src/planner/path_searching/include/path_searching/: astar2.h  matrix_hash.h
src/planner/path_searching/src/: astar2.cpp
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/include/plan_env/: edt_environment.h  map_ros.h  multi_map_manager.h  raycast.h  sdf_map.h
src/planner/plan_env/src/: edt_environment.cpp  map_ros.cpp  multi_map_manager.cpp  raycast.cpp  sdf_map.cpp
src/planner/traj_manager/: CMakeLists.txt  package.xml
src/planner/traj_manager/include/traj_manager/: traj_generator.h
src/planner/traj_manager/src/: traj_generator.cpp  traj_server.cpp
src/planner/utils/lkh_mtsp_solver/: CMakeLists.txt  package.xml
src/planner/utils/lkh_mtsp_solver/LKH/: README.txt
src/planner/utils/lkh_mtsp_solver/LKH/SRC/: CreateCandidateSet.c  FindTour.c  LKH.c  LKHmain.c  Makefile  ReadParameters.c  ReadProblem.c
src/planner/utils/lkh_mtsp_solver/LKH/SRC/INCLUDE/: LKH.h
src/planner/utils/lkh_mtsp_solver/include/: LKH.h
src/planner/utils/lkh_mtsp_solver/src2/: lkh3_interface.cpp  mtsp_node.cpp
src/planner/utils/traj_utils/: CMakeLists.txt  package.xml
src/planner/utils/traj_utils/include/traj_utils/: planning_visualization.h
src/planner/utils/traj_utils/src/: planning_visualization.cpp  process_msg.cpp
src/simulator/Utils/mars_quadrotor_msgs/: CMakeLists.txt
src/simulator/Utils/mars_quadrotor_msgs/msg/: PolyTraj.msg
src/simulator/Utils/rviz_plugins/config/: rviz_config.rviz
src/simulator/Utils/uav_utils/: CMakeLists.txt
src/simulator/cascadePID/: CMakeLists.txt  package.xml
src/simulator/cascadePID/include/: cascadePID.hpp
src/simulator/cascadePID/src/: cascadePID_node.cpp
src/simulator/local_sensing/: CMakeLists.txt
src/simulator/local_sensing/include/: filesystem.h  opengl_sim.hpp
src/simulator/local_sensing/src/: opengl_render_node.cpp  pcl_depth.cpp  pointcloud_render_node.cpp
src/simulator/map_generator/: CMakeLists.txt  package.xml
src/simulator/map_generator/src/: map_publisher.cpp
src/simulator/mars_drone_sim/: CMakeLists.txt
src/simulator/mars_drone_sim/launch/: dynamics_test.launch
src/simulator/test_interface/launch/: single_avia_with_fuel.launch  single_drone.xml  single_drone_with_fuel.xml
src/simulator/test_interface/src/: test_interface_node.cpp
