<?xml version="1.0"?>
<package format="2">
  <name>heterogeneous_manager</name>
  <version>0.0.0</version>
  <description>The hetero_planner package</description>

  <maintainer email="zagerzhang@todo.todo"> zagerzhang</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>plan_env</build_depend>
  <build_depend>path_searching</build_depend>
  <build_depend>active_perception</build_depend>
  <build_depend>traj_utils</build_depend>
  <build_depend>lkh_mtsp_solver</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>traj_manager</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>plan_env</build_export_depend>
  <build_export_depend>path_searching</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>plan_env</exec_depend>
  <exec_depend>path_searching</exec_depend>
  <exec_depend>active_perception</exec_depend>
  <exec_depend>traj_utils</exec_depend>
  <exec_depend>lkh_mtsp_solver</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>traj_manager</exec_depend>
  
</package>
