<?xml version="1.0"?>
<package format="2">
  <name>lkh_mtsp_solver</name>
  <version>0.0.0</version>
  <description>The mtsp solver package</description>

  <maintainer email="zagerzhang@todo.todo"> zagerzhang</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
